# my_resume

./: .gitignore  Dockerfile  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
home/: models.py
home/migrations/: 0003_resumepage.py
home/templates/home/: home_page.html
mysite/: requirements.txt  urls.py  wsgi.py
mysite/home/: models.py
mysite/home/migrations/: 0003_homepage_body.py  0004_resumepage.py
mysite/mysite/settings/: base.py  dev.py
mysite/settings/: base.py  dev.py  production.py
