[project]
name = "my-resume"
version = "0.1.0"
description = "My resume/cv powered by Wagtail and Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wagtail-resume>=2.9.0",
    "wagtail>=6.2.2",
    "wagtail-metadata",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
